# solana-rust-vscode-course

./: .gitignore
crates/course-runner/: Cargo.toml
crates/course-runner/src/: main.rs  progress.rs  reset.rs
neovim/: README.md
neovim/lua/katas/solana_rust/: cli.lua  init.lua
