[package]
name = "course-runner"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
